# TkinterUI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml  release.yml
basics/: button.py  checkbuttons.py  color_chooser.py  colorchooser.py  combo_boxes.py  comboboxes.py  entry.py  floodgauge.py  frames.py  menubutton.py  treeview.py
